# mcpaudit

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  output.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
src/mcpaudit/: __main__.py  cli.py  models.py  scanner.py
src/mcpaudit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/mcpaudit/rules/: _taint.py  code_injection.py  hardcoded_secrets.py  ldap_injection.py  log_injection.py  path_traversal.py  prompt_injection.py  shell_injection.py  sql_injection.py  ssrf.py  template_injection.py  unsafe_deserialization.py  xml_injection.py
tests/: test_cli.py  test_code_injection.py  test_context.py  test_hardcoded_secrets.py  test_ldap_injection.py  test_log_injection.py  test_path_traversal.py  test_prompt_injection.py  test_scanner.py  test_shell_injection.py  test_sql_injection.py  test_ssrf.py  test_template_injection.py  test_unsafe_deserialization.py  test_xml_injection.py
tests/fixtures/: code_injection_safe.py  code_injection_vulnerable.py  hardcoded_secrets_safe.py  hardcoded_secrets_vulnerable.py  ldap_injection_safe.py  ldap_injection_vulnerable.py  log_injection_safe.py  log_injection_vulnerable.py  path_traversal_safe.py  path_traversal_vulnerable.py  prompt_injection_safe.py  prompt_injection_vulnerable.py  shell_injection_safe.py  shell_injection_vulnerable.py  sql_injection_safe.py  sql_injection_vulnerable.py  ssrf_safe.py  ssrf_vulnerable.py  template_injection_safe.py  template_injection_vulnerable.py  unsafe_deserialization_safe.py  unsafe_deserialization_vulnerable.py  xml_injection_safe.py  xml_injection_vulnerable.py
